compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__field_access_function_call-2.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n    let t = #(fn(x) { x })\n\n    t.0(5)\n}\n"

---
-module(the_app).
-compile(no_auto_import).

-export([main/0]).

-spec main() -> integer().
main() ->
    T = {fun(X) -> X end},
    (erlang:element(1, T))(5).

