compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__field_access_function_call1.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "\npub fn main() {\n    let t = #(fn(x) { x })\n\n    t.0(5)\n}\n"
---
----- SOURCE CODE

pub fn main() {
    let t = #(fn(x) { x })

    t.0(5)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/0]).

-spec main() -> integer().
main() ->
    T = {fun(X) ->
        X
    end},
    (erlang:element(1, T))(5).
