compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__function_argument_shadowing.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "pub fn main(a) {\n  Box\n}\n\npub type Box {\n  Box(Int)\n}\n"
---
----- SOURCE CODE
pub fn main(a) {
  Box
}

pub type Box {
  Box(Int)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_ignored, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-export([main/1]).
-export_type([box/0]).

-type box() :: {box, integer()}.

-spec main(any()) -> fun((integer()) -> box()).
main(A) ->
    fun(_value) ->
        {box, _value}
    end.
